# ktp-controller

./: .flake8  .gitignore  Makefile  README.md  abitti2-listener  agent  alembic.ini  cli  examomatic-listener  example.env  ktp_controller_dev.env  pylintrc  pyproject.toml  setup-puavo-localhost.sh  supervisor-dev-run.conf  supervisor-test-chainer  supervisor-test.conf  supervisor.conf
.github/workflows/: makefile.yml
alembic/: env.py
alembic/versions/: 1f19e1e8fc1a_exam_info.py  70456b673d46_initial.py  8f68ef9389a7_remove_thing.py  c5b126dcfbfc_initial.py  cf3a53e8cfbd_add_scheduledexampackage_state_changed_.py  e732695e24e1_fix_unique_true_scheduled_exam_package_.py
aux/: setup-puavo-localhost.sh
debian/: .gitignore  changelog  control  rules
integration_tests/: integration_test.env  supervisor-integration-test.conf
ktp_controller/: __init__.py  agent.py  database.py  files.py  main.py  messages.py  pydantic.py  redis.py  settings.py  ui.py  utils.py
ktp_controller/abitti2/: client.py  main.py  naksu2.py  schemas.py  utils.py  words.py  words.txt
ktp_controller/agent/: main.py  state.py  stats.py  utils.py
ktp_controller/api/: client.py  database.py  main.py  models.py  utils.py
ktp_controller/api/abitti2/: routes.py  schemas.py
ktp_controller/api/agent/: routes.py  schemas.py
ktp_controller/api/commands/: routes.py  schemas.py
ktp_controller/api/exam/: routes.py  schemas.py  utils.py
ktp_controller/api/status/: routes.py  schemas.py
ktp_controller/api/system/: routes.py  schemas.py
ktp_controller/api/thing/: routes.py  schemas.py
ktp_controller/api/ui/: routes.py
ktp_controller/cli/: main.py
ktp_controller/examomatic/: client.py  main.py
ktp_controller/examomatic/mock/: data.py  main.py  utils.py
ktp_controller/examomatic/mock/data/exam_infos/: REQ1.json
ktp_controller/thing/: routes.py  schemas.py
supervisor/: chainer  dev-run.conf  integration-test.conf  run.conf  test.conf
supervisor/proglogs/: README
tests/: data.py  examomatic-mock  examomatic-password.txt  integration_test.env  integration_test.py  integration_test_case2.py  supervisor-test-chainer  supervisor-test.conf  test.env  test_api_abitti2_route.py  test_api_exam_route.py  test_api_system_route.py  test_api_ui_route.py  test_thing.py  utils.py
