[tool.poetry]
name = "ktp-controller"
version = "0.1.0"
description = "ktp-controller"
authors = ["Opinsys Developers <dev@opinsys.fi>"]
license = "GPLv2"
packages = [
  { include = "ktp_controller" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
#black = "*"
#isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
