[tool.poetry]
name = "ktp-controller"
version = "0.1.0"
description = "ktp-controller"
authors = ["Opinsys Developers <dev@opinsys.fi>"]
license = "GPLv2"
packages = [
  { include = "ktp_controller" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
alembic = "*"
pydantic-settings = "*"
python-multipart = "*"
requests = "*"
supervisor = "*"
redis = "*"
websockets = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pylint = "*"
httpx = "*"
black = "*"
#isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
