[project]
name = "ktp-controller"
version = "0.1.0"
description = "ktp-controller"
authors = [
  { name = "Opinsys Developers", email = "dev@opinsys.fi"},
]
maintainers = [
  { name = "Opinsys Developers", email = "dev@opinsys.fi"},
]
license = "GPL-2.0-only"
readme = "README.md"
requires-python = ">=3.11"
repository = "https://github.com/opinsys/ktp-controller"

[project.scripts]
ktp_controller_agent = "ktp_controller.agent.main:run"
ktp_controller_api = "ktp_controller.api.main:run"
ktp_controller_cli = "ktp_controller.cli.main:run"

[tool.poetry]
packages = [
  { include = "ktp_controller" },
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
alembic = "*"
pydantic-settings = "*"
python-multipart = "*"
requests = "*"
supervisor = "*"
redis = "*"
websockets = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pylint = "*"
httpx = "*"
black = "*"
flake8 = "*"
jedi = "*"
#isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
